tests/snapshots/examples_fixtures/type_system__04_boundary_first_contract_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/04_boundary_first_contract_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/04_boundary_first_contract_style.flx:20:1
   |
20 | print(add(2, 3))
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/04_boundary_first_contract_style.flx:20:1
   |
20 | print(add(2, 3))
   | ^^^^^^^^^^^^^^^^
   | ---------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/04_boundary_first_contract_style.flx:21:1
   |
21 | print(scaled_sum(1, 2, 3, 10))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
== stdout ==
<not executed>
